--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "caporal": "^0.7.0",
-    "cheerio": "^1.0.0-rc.1"
+    "cheerio": "^1.0.0-rc.1",
+    "disconnect": "^1.2.0",
+    "dotenv": "^4.0.0"
   }
 }
